# rainy-sdk

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  PRODUCTION_CHECKLIST.md  README.md  RELEASE.md  SECURITY.md  context7.json
.github/workflows/: README.md  benchmark.yml  ci.yml  dependencies.yml  docs.yml  msrv.yml  release.yml  security.yml  verify-signoffs.yml
docs/: GEMINI_3_INTEGRATION.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/rainy_sdk/: all.html  constant.DEFAULT_BASE_URL.html  constant.VERSION.html  fn.get_offline_capabilities.html  index.html  sidebar-items.js
docs/rainy_sdk/auth/: index.html  sidebar-items.js  struct.AuthConfig.html  struct.RateLimiter.html
docs/rainy_sdk/client/: index.html  sidebar-items.js  struct.RainyClient.html
docs/rainy_sdk/cowork/: index.html  sidebar-items.js  struct.CoworkCapabilities.html  struct.CoworkFeatures.html  struct.CoworkModelsResponse.html  struct.CoworkPlan.html  struct.CoworkProfile.html  struct.CoworkUsage.html
docs/rainy_sdk/endpoints/cowork/: fn.get_offline_capabilities.html
docs/rainy_sdk/error/: enum.RainyError.html  index.html  sidebar-items.js  struct.ApiErrorDetails.html  struct.ApiErrorResponse.html  type.Result.html
docs/rainy_sdk/models/: enum.CapabilityFlag.html  enum.HealthStatusEnum.html  enum.MessageRole.html  enum.OpenAIContentPart.html  enum.OpenAIMessageContent.html  enum.OpenAIMessageRole.html  enum.ReasoningMode.html  enum.ReasoningProvider.html  enum.ResearchDepth.html  enum.ResearchProvider.html  enum.ResponseFormat.html  enum.ThinkingLevel.html  enum.ToolChoice.html  enum.ToolType.html  enum.TransactionType.html  fn.build_reasoning_config.html  fn.select_models.html  index.html  sidebar-items.js  struct.ApiKey.html  struct.AvailableModels.html  struct.ChatChoice.html  struct.ChatCompletionChunk.html  struct.ChatCompletionChunkChoice.html  struct.ChatCompletionChunkDelta.html  struct.ChatCompletionRequest.html  struct.ChatCompletionResponse.html  struct.ChatCompletionStreamChoice.html  struct.ChatCompletionStreamDelta.html  struct.ChatCompletionStreamResponse.html  struct.ChatMessage.html  struct.CompatWarning.html  struct.ContentPart.html  struct.CreditInfo.html  struct.CreditTransaction.html  struct.DailyUsage.html  struct.EnhancedChatMessage.html  struct.EnhancedUsage.html  struct.FeaturesUsed.html  struct.FunctionCall.html  (+45 more)
docs/rainy_sdk/models/model_constants/: constant.ASTRONOMER.html  constant.ASTRONOMER_1.html  constant.ASTRONOMER_1_5.html  constant.ASTRONOMER_1_FAST.html  constant.ASTRONOMER_1_MAX.html  constant.ASTRONOMER_2.html  constant.ASTRONOMER_2_PRO.html  constant.CEREBRAS_LLAMA3_1_8B.html  constant.CEREBRAS_OSS_120B.html  constant.CLAUDE_OPUS_4_1.html  constant.CLAUDE_SONNET_4.html  constant.DEEPSEEK_R1_DISTILL_LLAMA_70B.html  constant.GEMINI_2_5_FLASH.html  constant.GEMINI_2_5_FLASH_LITE.html  constant.GEMINI_2_5_PRO.html  constant.GOOGLE_GEMINI_2_5_FLASH.html  constant.GOOGLE_GEMINI_2_5_FLASH_LITE.html  constant.GOOGLE_GEMINI_2_5_PRO.html  constant.GOOGLE_GEMINI_3_FLASH.html  constant.GOOGLE_GEMINI_3_PRO.html  constant.GOOGLE_GEMINI_3_PRO_IMAGE.html  constant.GPT_4O.html  constant.GPT_5.html  constant.GPT_5_PRO.html  constant.GROQ_COMPOUND.html  constant.GROQ_LLAMA_3_1_8B_INSTANT.html  constant.GROQ_LLAMA_3_3_70B_VERSATILE.html  constant.KIMI_K2_0925.html  constant.O3.html  (+16 more)
docs/rainy_sdk/retry/: fn.retry_with_backoff.html  index.html  struct.RetryConfig.html
docs/rainy_sdk/search/: enum.ResearchResponse.html  enum.ThinkingLevel.html  index.html  sidebar-items.js  struct.DeepResearchResponse.html  struct.ResearchConfig.html  struct.ResearchResult.html  struct.ResearchSource.html
docs/rainy_sdk/session/: index.html  sidebar-items.js  struct.CreatedApiKey.html  struct.LoginRequest.html  struct.LoginResponse.html  struct.OrgProfile.html  struct.RainySessionClient.html  struct.RefreshRequest.html  struct.RefreshResponse.html  struct.RegisterRequest.html  struct.SessionApiKeyListItem.html  struct.SessionConfig.html  struct.SessionTokens.html  struct.SessionUser.html  struct.UsageCreditsResponse.html  struct.UsageStatsResponse.html
docs/search.desc/rainy_sdk/: rainy_sdk-desc-0-.js
docs/search.index/: 00bd2bbbc2fd.js  00db01316ec7.js  0288fe7bcf94.js  032155e8667d.js  0517b5210830.js  06c38679f1a1.js  08917c6d62b5.js  08a18f6fda9f.js  0a22dcad0d89.js  0c44c954c00e.js  0ce5ee81c39f.js  0ceababe7ec3.js  0d068ee3c82f.js  0d210d843685.js  0d8c4db7b154.js  0ed4f133cf4b.js  0fd2f9097f0a.js  0fe539af1e00.js  103614ddd3c3.js  11a4eec0a057.js  13b109f5b022.js  1710cff3aed2.js  19a570fc8759.js  1a47eb038eea.js  1aab752c8927.js  1abeb2876198.js  1c41cdb7c5a0.js  1e584a597123.js  1f3c78540c6f.js  1f5590be0a0f.js  1f812ebedec1.js  1fa3169f3109.js  2029c9a3280a.js  20c370246f06.js  22335185bd1f.js  2246f8ea0b3b.js  226106440ec6.js  229a4e11a02d.js  23838e54b2ec.js  23d9092830e3.js  (+75 more)
docs/search.index/crateNames/: a523c123853d.js
docs/search.index/desc/: 7842e113e0f6.js
docs/search.index/entry/: 77b228183067.js
docs/search.index/function/: 9c88e83cde7f.js
docs/search.index/generic_inverted_index/: 81d44bf6d271.js
docs/search.index/name/: 13462de6af4a.js
docs/search.index/normalizedName/: 29f2b1b796d6.js
docs/search.index/path/: 0860df9450b6.js
docs/search.index/type/: 2bbf4cf51da5.js
docs/src/rainy_sdk/: auth.rs.html  client.rs.html  cowork.rs.html  error.rs.html  lib.rs.html  models.rs.html  retry.rs.html  search.rs.html  session.rs.html
examples/: basic_usage.rs  chat_completion.rs  error_handling.rs  gemini_3_thinking.rs  session_auth.rs
src/: auth.rs  client.rs  cowork.rs  error.rs  lib.rs  models.rs  retry.rs  search.rs  session.rs
src/endpoints/: chat.rs  cowork.rs  health.rs  keys.rs  mod.rs  search.rs  usage.rs  user.rs
test_readme_check/: Cargo.toml
test_readme_check/src/: main.rs
tests/: integration_test.rs  openai_chat_api_test.rs  research_test.rs  responses_api_test.rs  session_client_integration_test.rs  unit_tests.rs
(+41 files in other folders)
