[package]
name = "rainy-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Enosis Labs <hello@enosislabs.com>"]
description = "Official Rust SDK for Rainy API by Enosis Labs - Simplified, unified interface for multiple AI providers (OpenAI, Anthropic, Google Gemini, and more)"
license = "Apache-2.0"
repository = "https://github.com/enosislabs/rainy-sdk"
homepage = "https://github.com/enosislabs/rainy-sdk"
documentation = "https://docs.rs/rainy-sdk"
readme = "README.md"
keywords = ["ai", "api", "openai", "anthropic", "gemini"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

# Include specific files for packaging
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
]

[dependencies]
futures = "0.3.31"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# SSE parsing
eventsource-stream = "0.2"
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Error handling
thiserror = "2.0"
anyhow = "1.0.99"

# Utilities
url = "2.5"
base64 = "0.22"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

# Rate limiting (optional)
governor = { version = "0.7", optional = true }

# Logging
tracing = { version = "0.1.41", optional = true }

[features]
default = []
rate-limiting = ["governor"]
logging = ["tracing"]

[dev-dependencies]
tokio-test = "0.4.4"
mockito = "1.7"
